--- a/Admin/MasterPages/MasterPage.master
+++ b/Admin/MasterPages/MasterPage.master
@@ -5,10 +5,6 @@
 <%@ Register Src="~/Admin/UserControl/ucHeader.ascx" TagPrefix="uc1" TagName="ucHeader" %>
 <%@ Register Src="~/Admin/UserControl/ucMenu.ascx" TagPrefix="uc1" TagName="ucMenu" %>
 
-
-
-
-
 <!DOCTYPE html>
 
 <html>
@@ -31,7 +27,6 @@
             <%-- ucMenu --%>
             <uc1:ucMenu runat="server" id="ucMenu" />
 
-
             <asp:ContentPlaceHolder runat="server" ID="content">
             </asp:ContentPlaceHolder>
         </div>
@@ -39,5 +34,16 @@
         <asp:ContentPlaceHolder runat="server" ID="foot">
         </asp:ContentPlaceHolder>
     </form>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const select = document.querySelector(".category");
+            if (select) {
+                select.addEventListener("change", function () {
+                    const selectedId = this.value;
+                    window.location.href = "AccountCategoryList.aspx?id=" + selectedId;
+                });
+            }
+        });
+    </script>
 </body>
 </html>
